--- a/aboutme.html
+++ b/aboutme.html
@@ -152,7 +152,7 @@
             </svg>
           </div>
           <div class="cv-pdf">
-            <a href="document/Milinko_Vujasin_Resume (1) (1).docx"
+            <a href="document/Milinko_Vujasin_Resume (1) (1).pdf"
               ><p>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
