--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               date with the latest trends to build modern and efficient web
               applications.
             </p>
-            <a href="document/opisna_ocena.pdf" target="_blank"
+            <a href="document/scan - 2025-02-07T185032.551.pdf" target="_blank"
               ><img src="logo/info_10830.png" alt="" class="info"
             /></a>
 
@@ -295,7 +295,7 @@
       <div class="container">
         <div class="footer">
           <p>2025 &copy; Vujasin-World. All rights reserved.</p>
-          <ul>
+          <ul class="navbar-ul">
             <li class="navbar-footer"><a href="index.html">Home</a></li>
             <li class="navbar-footer"><a href="project.html">Project</a></li>
             <li class="navbar-footer"><a href="aboutme.html">About me</a></li>
