--- a/project.html
+++ b/project.html
@@ -74,8 +74,8 @@
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" width="54" height="54" viewBox="0 0 24 24" fill="none"><path d="M7.00015 5.58569L16.0002 14.5857V5.99991H18.0002V17.9999H6.00015V15.9999H14.5859L5.58594 6.99991L7.00015 5.58569Z" fill="#047aed"/></svg>
         <div class="headerbar">
-          <div class="card-project">
-            <div class="card-front">
+          <!-- <div class="card-project">
+             <div class="card-front">
               <img src="img/file_type_html_icon_130541.png" alt="htmlicon" />
               <div class="btn"><p>Read more</p></div>
             </div>
@@ -89,9 +89,9 @@
                 </g>
               </svg>
               </div>
-              <div class="btn-project"><p><a href="#" target="_blank">Open project</a></p></div>
+              <div class="btn-project"><p><a href="#" target="_blank">Open project</a></p></div> 
             </div>
-          </div>
+          </div> -->
 
           <div class="card-project">
             <div class="card-front">
@@ -108,7 +108,7 @@
                 </g>
               </svg>
               </div>
-              <div class="btn-project"><p><a href="#" target="_blank">On project</a></p></div>
+              <div class="btn-project"><p><a href="https://vujasin-code.github.io/animation/" target="_blank">On project</a></p></div>
             </div>
           </div>
 
